@@ -111,6 +111,9 @@ function admin_menu_init() {
     if ($setting = variable_get('admin_menu_position_fixed', 0)) {
       drupal_add_js(array('admin_menu' => array('position_fixed' => $setting)), 'setting');
     }
+    if ($setting = variable_get('admin_menu_tweak_tabs', 0)) {
+      drupal_add_js(array('admin_menu' => array('tweak_tabs' => $setting)), 'setting');
+    }
     if ($_GET['q'] == 'admin/build/modules') {
       drupal_add_js(array('admin_menu' => array('tweak_modules' => variable_get('admin_menu_tweak_modules', 0))), 'setting');
     }
