@@ -6,6 +6,7 @@ Admin Menu x.x-x.x, xxxx-xx-xx
 
 Admin Menu 7.x-x.x, xxxx-xx-xx
 ------------------------------
+#322877 by sun: Added tweak to move page tabs into administration menu.
 #287468 by sun: Fixed module paths directly below "admin" get the wrong parent.
 #310423 by sun: Added optional position: fixed configuration setting.
 #292657 by smk-ka: Improved rendering performance.
